--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Compiled class file
 *.class
 
+/target/
+/.mvn/
+deploy-u3-root.sh
+
+
+
 # Log file
 *.log
 
@@ -21,3 +27,26 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+
+### VS Code ###
+.vscode/
+
+####### logs ########
+*.log
+*.gz
+log/
+
