--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port = 8892
+server.port=80
 
-m3u8gen.init.music=/root/documents/music/
-m3u8gen.init.host=31.210.208.189
+m3u8gen.init.music=/music/
+m3u8gen.init.host=localhost
 m3u8gen.init.port=8891
 m3u8gen.init.prefix=/files/
