--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,22 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/net.tascalate/net.tascalate.concurrent -->
+		<dependency>
+			<groupId>net.tascalate</groupId>
+			<artifactId>net.tascalate.concurrent</artifactId>
+			<version>0.8.4</version>
+		</dependency>
+		
         <!-- https://mvnrepository.com/artifact/com.pivovarit/throwing-function -->
         <dependency>
             <groupId>com.pivovarit</groupId>
