--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     volumes:
       - type: bind
         source: ${MUSIC_PATH}
-        target: /opt/www/files/      
+        target: /opt/www/files/
+    restart: always
   playlist:
     image: "dreamworkerln/m3u8gen-playlist"
     network_mode: bridge
@@ -21,3 +22,4 @@ services:
       - type: bind
         source: ${MUSIC_PATH}
         target: /music/
+    restart: always
